[package]
name = "firestorm-enabled"
version = "0.5.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A dependency of firestorm. Do not use directly."

[features]
cpu_time = ["firestorm-core/cpu_time"]
system_time = ["firestorm-core/system_time"]

[dependencies]
inferno = "0.11.3"
firestorm-core = "0.1"