[package]
name = "firestorm"
version = "0.3.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A low overhead intrusive flamegraph profiler."

[features]
enable_cpu_time = ["inferno", "firestorm-core/cpu_time"]
enable_system_time = ["inferno", "firestorm-core/system_time"]

[dependencies]
inferno = { version="0.10.0", optional=true }
firestorm-core = { version="0.1.0", optional=true }

[dev-dependencies]
criterion = "0.3"
core_affinity = "0.5.10"
thread-priority = "0.2.0"

[[bench]]
name = "soak_bench"
harness = false