[package]
name = "firestorm"
version = "0.3.1"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A low overhead intrusive flamegraph profiler."

[features]
enable_cpu_time = ["firestorm-enabled/cpu_time"]
enable_system_time = ["firestorm-enabled/system_time"]

[dependencies]
firestorm-enabled = { version="0.3.1", optional=true }

[dev-dependencies]
criterion = "0.3"
core_affinity = "0.5.10"
thread-priority = "0.2.0"

[[bench]]
name = "soak_bench"
harness = false